# longtail

./: CMakeLists.txt  build_cmake.bat
.github/workflows/: create-release.yml  master-build.yml  pr-build.yml
cmd/: CMakeLists.txt
lib/: CMakeLists.txt  longtail_platform.c
lib/archiveblockstore/: CMakeLists.txt
lib/atomiccancel/: CMakeLists.txt
lib/bikeshed/: CMakeLists.txt
lib/blake2/: CMakeLists.txt
lib/blake3/: CMakeLists.txt
lib/blockstorestorage/: CMakeLists.txt
lib/brotli/: CMakeLists.txt
lib/cacheblockstore/: CMakeLists.txt
lib/compressblockstore/: CMakeLists.txt
lib/compressionregistry/: CMakeLists.txt
lib/filestorage/: CMakeLists.txt
lib/fsblockstore/: CMakeLists.txt
lib/hashregistry/: CMakeLists.txt
lib/hpcdcchunker/: CMakeLists.txt
lib/lrublockstore/: CMakeLists.txt
lib/lz4/: CMakeLists.txt
lib/memstorage/: CMakeLists.txt
lib/memtracer/: CMakeLists.txt
lib/meowhash/: CMakeLists.txt
lib/ratelimitedprogress/: CMakeLists.txt
lib/shareblockstore/: CMakeLists.txt
lib/zstd/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt
